--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -9,7 +9,8 @@
   },
 
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+      "type": "module"
   },
 
   "permissions": [
