feat: add URL Blocking Engine
bug fix:
1. clear cache of blocked website. if there is cached, the block mechanism do not work

additional feat:
1. add reload mechanisam to disable

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,26 +3,23 @@
   "name": "FocusFalcon",
   "description": "Block distractions. Build focus. Feel good doing it.",
   "version": "0.1.0",
-
   "action": {
     "default_popup": "popup.html"
   },
-
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
-
   "permissions": [
     "storage",
     "alarms",
     "declarativeNetRequest"
   ],
-
   "host_permissions": [
-    "<all_urls>"
+    "*://*.youtube.com/*",
+    "*://*.reddit.com/*",
+    "*://*.twitter.com/*"
   ],
-
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
