--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -3,26 +3,35 @@
   "name": "FocusFalcon",
   "description": "Block distractions. Build focus. Feel good doing it.",
   "version": "0.1.0",
-
   "action": {
     "default_popup": "popup.html"
   },
-
   "background": {
-    "scripts": ["background.js"],
-      "type": "module"
+    "scripts": [
+      "background.js"
+    ],
+    "type": "module"
   },
-
   "permissions": [
     "storage",
     "alarms",
-    "declarativeNetRequest"
+    "declarativeNetRequest",
+    "browsingData",
+    "webNavigation"
   ],
-
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "mainpage/blocked.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "host_permissions": [
     "<all_urls>"
   ],
-
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
