--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -36,5 +36,9 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "options_ui": {
+    "page": "settings/setting.html",
+    "open_in_tab": true
   }
 }
