--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,9 +31,9 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/avatar-capybara.png",
+    "48": "icons/avatar-falcon.png",
+    "128": "icons/avatar-red-panda.png"
   },
   "options_ui": {
     "page": "settings/setting.html",
