--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -7,16 +7,12 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ],
+    "service_worker": "background.js",
     "type": "module"
   },
   "permissions": [
     "storage",
     "alarms",
-    "declarativeNetRequest",
-    "browsingData",
     "webNavigation"
   ],
   "web_accessible_resources": [
