--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -7,7 +7,9 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "type": "module"
   },
   "permissions": [
@@ -28,12 +30,21 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "icons/avatar-capybara.png",
-    "48": "icons/avatar-falcon.png",
-    "128": "icons/avatar-red-panda.png"
+    "48": "icons/Falcon48.png"
   },
   "options_ui": {
     "page": "settings/setting.html",
     "open_in_tab": true
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "focusfalcon@extensions",
+      "data_collection_permissions": {
+        "required": ["none"],
+        "data_types": [],
+        "purposes": [],
+        "data_categories": []
+      }
+    }
   }
 }
